# auto_player

./: .gitignore  .pre-commit-config.yaml  README.md  auto_player.py  cli.py  player.py  pyproject.toml  setup.py  state.py
auto_player/: __init__.py  __main__.py  base.py  cli.py  file_group_factory.py  player.py  state.py
auto_player/app/: __init__.py  base.py  file_group_factory.py
auto_player/backend/: __init__.py  localfilebackend.py
auto_player/file_group/: RegexFileGroup.py  __init__.py  regex_file_group.py
auto_player/show/: __init__.py  statefull.py
backend/: __init__.py  localfilebackend.py
extra/completion_script/: auto_player
file_group/: RegexFileGroup.py  __init__.py
player_scripts/: wls_mpc.py
show/: __init__.py  statefull.py
src/auto_player/: __main__.py  cli.py  player.py  state.py
src/auto_player/app/: __init__.py  base.py  file_group_factory.py
src/auto_player/backend/: __init__.py  localfilebackend.py
src/auto_player/file_group/: __init__.py  regex_file_group.py
src/auto_player/show/: __init__.py  statefull.py
test/: test_app.py  test_player.py
tests/: test_app.py  test_cli.py  test_player.py
